--- a/report/paper.tex
+++ b/report/paper.tex
@@ -25,16 +25,16 @@
 \section{Introduction}
 
 \section{Background}
-    The shape matching approach followed was proposed by M\"uller et al.~\cite{shapematching}. 
-    It is a shape matching technique for deformation of soft objects.
+    The shape matching approach proposed by M\"uller et al.~\cite{shapematching} is a shape matching technique for deformations of soft bodies.
     
-\section{Shape matching}
-
     \begin{figure}
     \includegraphics[width=\linewidth]{img/deformation2.png}
     \caption{The shape matching process where the original shape $\mathbf{x}^0_i$ is matched to the deformed shape $\mathbf{x}_i$ and pulled towards the goal shape $\mathbf{g}_i$. Image source:~\cite{shapematching}.}
     \label{fig:def}
     \end{figure}
+    
+\section{Shape matching implementation}
+
    
     \begin{equation} \label{eq:min}
         \sum_i{w_i(\mathbf{R}(\mathbf{x}_i^0 - \mathbf{t}_0) + \mathbf{t} - \mathbf{x}_i)^2}
@@ -71,7 +71,7 @@
         \mathbf{x}_i(t + h) = \mathbf{x}_i(t) + h\mathbf{v}_i(t + h) 
     \end{equation}
 
-\section{Summary}\label{conclusions}
+\section{Conclusion}
 
 \bibliographystyle{ieeetr}
 \pagebreak
