--- a/report/paper.tex
+++ b/report/paper.tex
@@ -23,6 +23,9 @@
 ]
 
 \section{Introduction}
+    Soft body deformation is a computer graphics method for simulating the deformation of a soft body. 
+    There exists many techniques for achieving soft body deformation.
+    In this paper we present the method and results from implementing a soft body deformer plugin for the 3D computer graphics software Maya. The implementation is based on the meshless shape matching method proposed by M\"uller et al.~\cite{shapematching}.
 
 \section{Background}
     The shape matching approach proposed by M\"uller et al.~\cite{shapematching} is a shape matching technique for deformations of soft bodies.
