--- a/report/paper.tex
+++ b/report/paper.tex
@@ -9,6 +9,7 @@
 \documentclass[12pt, twocolumn]{article}
 \usepackage{graphicx} % Figures
 \usepackage{amsmath}
+\usepackage{subcaption}
 
 \newenvironment{myitemize}
 { \begin{itemize}
@@ -97,7 +98,7 @@
 
 The plugin is built upon the deformer node, $MPxDeformerNode$, in Mayas C++ API which can control the position of all vertices of an object with the deformer loaded. By copying the vertice positions as individual particles in a custom particle system in the plugin more control gained. A bigger freedom is also gained which allows the use of high quality linear algebra libraries for efficient and complex calculations. 
 
-The deformation of a shape can be controlled by changing the following parameters:
+As seen in \ref{fig:gui}, the deformation of a shape can be controlled by changing the following parameters:
 
 \begin{myitemize} 
   \item Gravity Magnitude and Direction 
@@ -120,6 +121,30 @@ The local time variable is connected to the global time so that the deformation 
     \end{figure}
 
 \section{Conclusion}
+
+The deformer node plugin can handle rigid as well as soft body (linear and quadratic) deformations with a low computation. \ref{fig:maya} illustrates the deformation that happens when a sphere collides with the ground plane. After impact, in \ref{fig:sfig2}, will the mesh reform into a egg-like shape to later settle down as the original sphere.
+
+\begin{figure}
+\begin{subfigure}{.3\textwidth}
+  \centering
+  \includegraphics[width=0.9\linewidth]{img/def1.png}
+  \caption{}
+  \label{fig:sfig1}
+\end{subfigure}%
+\begin{subfigure}{.3\textwidth}
+  \centering
+  \includegraphics[width=0.9\linewidth]{img/def2.png}
+  \caption{}
+  \label{fig:sfig2}
+\end{subfigure}
+\caption{A quadratic deformation of a sphere using the plugin.}
+\label{fig:maya}
+\end{figure}
+
+%Picture of IBL rendered deformation, comment on that in results.
+
+
+\section{Discussion and Future Work}
 
 
 \bibliographystyle{ieeetr}
