Finished sm-implementation

--- a/report/paper.tex
+++ b/report/paper.tex
@@ -38,7 +38,7 @@
     The shape matching approach proposed by M\"uller et al.~\cite{shapematching} is a meshless shape matching technique for deformation of soft bodies.
     It is a meshless technique since the object is only represented by a point cloud.
     There is no need for connectivity information between the points since the shape matching keeps the form of the object.
-    This is done by driving the deformed points towards the position of the points of the original shape.
+    This is done by driving the deformed points towards the position of the points of the original shape, see figure~\ref{fig:def}.
     
     \begin{figure}
     \includegraphics[width=\linewidth]{img/deformation2.png}
@@ -47,34 +47,24 @@
     \end{figure}
     
 \section{Shape matching implementation}
+    The soft body is represented by a point cloud, where each particle has a mass $m_i$, an initial position $\mathbf{x}_i^0$ representing the shape of the object and a deformed position $\mathbf{x}_i$.
+    The soft body is affected by external forces such as gravity, collision impulse and friction impulse caused by a collision with an object.
+    The external forces $f_{ext} = F_g + J_c + J_f$ is what causes the deformation of the object.
+    The new velocities and positions for the particles are calculated using the external forces and Euler integration.
+    The collision impulse $J_c$ is calculated through Equation~\ref{eq:col} where $\epsilon$ is the elasticity of the soft body, $n$ is the contact normal and $\Delta{v}$ is the velocity difference between the soft body and the static object it collides with.
+    The friction impulse is calculated through Equation~\ref{eq:fric}, where $f$ is the friction.
 
-   
-    \begin{equation} \label{eq:min}
-        \sum_i{w_i(\mathbf{R}(\mathbf{x}_i^0 - \mathbf{t}_0) + \mathbf{t} - \mathbf{x}_i)^2}
+    \begin{equation} \label{eq:col}
+        J_c = -(1 + \epsilon)(n(n\cdot{\Delta{v}}))m_i
     \end{equation}
 
-    \begin{equation} \label{eq:com1}
-        \mathbf{t}_0 = \mathbf{x}^0_{cm} = \frac{\sum_i{m_i\mathbf{x}_i^0}}{\sum_i{m_i}}
+    \begin{equation} \label{eq:fric}
+        J_f = -f(\Delta{v} - n(n\cdot{\Delta{v}})m_i
     \end{equation}
 
-    \begin{equation} \label{eq:com2}
-        \mathbf{t} = \mathbf{x}_{cm} = \frac{\sum_i{m_i\mathbf{x}_i}}{\sum_i{m_i}}
-    \end{equation}
-
-    To find the optimal rotation matrix $\mathbf{R}$ the relative locations 
-    $\mathbf{q}_i = \mathbf{x}^0_i - \mathbf{x}^0_{cm}$ and 
-    $\mathbf{p}_i = \mathbf{x}_i - \mathbf{x}_{cm}$ are defined and the rotation matrix 
-    $\mathbf{R}$ is approximated by finding the linear transformation $\mathbf{A}$, see equation~\ref{eq:A}.
-
-    \begin{equation} \label{eq:A}
-        \mathbf{A} = (\sum_i{m_i\mathbf{p}_i\mathbf{q}_i^{\mathbf{T}}})
-        (\sum_i{m_i\mathbf{q}_i\mathbf{q}_i^{\mathbf{T}}})^{-1} 
-        = \mathbf{A}_{pq}\mathbf{A}_{qq}
-    \end{equation}
-
-    \begin{equation}\label{eq:goal}
-        \mathbf{g}_i = \mathbf{R}(\mathbf{x}^0_i - \mathbf{x}^0_{cm}) + \mathbf{x}_{cm}
-    \end{equation}
+    The shape matching is made by finding a goal position $g_i$ for every particle.
+    The goal position is used to find the new velocities and positions for the particles for each time step, driving the soft body to take its original shape at $\mathbf{x}^0$.
+    The new velocities and positions is calculated through Euler integration where $\alpha$ is the bounciness and stiffness of the soft body and $h$ is the time step, see Equation~\ref{eq:vel} and~\ref{eq:pos}.
 
     \begin{equation} \label{eq:vel}
         \mathbf{v}_i(t + h) = \mathbf{v}_i(t) + \alpha{\frac{\mathbf{g}_i(t) - \mathbf{x}_i(t)}{h}} + hf_{ext}(t)/m_i
@@ -83,6 +73,54 @@
     \begin{equation} \label{eq:pos}
         \mathbf{x}_i(t + h) = \mathbf{x}_i(t) + h\mathbf{v}_i(t + h) 
     \end{equation}
+
+    The goal position is found through the rotation matrix $\mathbf{R}$, the initial position $\mathbf{x}^0_i$, the center of mass for the initial position $\mathbf{x}^0_{cm}$ and the center of mass for the current deformed shape $\mathbf{x}_{cm}$, see Equation~\ref{eq:goal}.
+   
+    \begin{equation}\label{eq:goal}
+        \mathbf{g}_i = \mathbf{R}(\mathbf{x}^0_i - \mathbf{x}^0_{cm}) + \mathbf{x}_{cm}
+    \end{equation}
+
+    The rotation matrix is approximated through the linear transformation $\mathbf{A}$, see Equation~\ref{eq:A}.
+    The linear transformation is composed of the relative locations $\mathbf{q}_i = \mathbf{x}^0_i - \mathbf{x}^0_{cm}$ and $\mathbf{p}_i = \mathbf{x}_i - \mathbf{x}_{cm}$, see Equation~\ref{eq:com1} and~\ref{eq:com2}.
+    The rotation $\mathbf{R}$ is the rotational part of $\mathbf{A}_{pq}$ which is found through singular value decomposition.
+
+    \begin{equation} \label{eq:A}
+        \mathbf{A} = (\sum_i{m_i\mathbf{p}_i\mathbf{q}_i^{\mathbf{T}}})
+        (\sum_i{m_i\mathbf{q}_i\mathbf{q}_i^{\mathbf{T}}})^{-1} 
+        = \mathbf{A}_{pq}\mathbf{A}_{qq}
+    \end{equation}
+
+    \begin{equation} \label{eq:com1}
+        \mathbf{x}^0_{cm} = \frac{\sum_i{m_i\mathbf{x}_i^0}}{\sum_i{m_i}}
+    \end{equation}
+
+    \begin{equation} \label{eq:com2}
+        \mathbf{x}_{cm} = \frac{\sum_i{m_i\mathbf{x}_i}}{\sum_i{m_i}}
+    \end{equation}
+
+    \paragraph{Rigid deformation}\mbox{}\\[5px]
+    For a rigid deformation $\alpha$ is set to one, moving the points to the goal position $\mathbf{g}_i$ exactly for each time step.
+    The goal position represents a rotated and translated version of the initial shape.
+
+    \paragraph{Linear deformation}\mbox{}\\[5px]
+    For linear deformation, the linear transformation $\mathbf{A}$ in combination with the rotation matrix $\mathbf{R}$ according to Equation~\ref{eq:T} is used instead of the rotational matrix to calculate the goal position, see Equation~\ref{eq:goal}.
+    The linear deformation $\mathbf{A}$ is divided by $\sqrt[3]{det(\mathbf{A})}$ to keep the volume conserved.
+
+    \begin{equation} \label{eq:T}
+        \beta\mathbf{A} + (1 - \beta)\mathbf{R}
+    \end{equation}
+
+    \paragraph{Quadratic deformation}\mbox{}\\[5px]
+    To extend the motion to twisting and bending a quadratic transformation is applied.
+    $\mathbf{q}$ is extended to $\mathbf{\tilde{q}} = [\mathbf{q}_x, \mathbf{q}_y, \mathbf{q}_z, \mathbf{q}_x^2, \mathbf{q}_y^2, \mathbf{q}_z^2, \mathbf{q}_x\mathbf{q}_y, \mathbf{q}_y\mathbf{q}_z, \mathbf{q}_z\mathbf{q}_x]^\mathbf{T}$.
+    With the new $\mathbf{\tilde{q}}$, a new linear transformation $\mathbf{\tilde{A}}$ can be calculated the same way as Equation~\ref{eq:A}.
+    To keep the volume, $\mathbf{\tilde{A}}$ is divided by $\sqrt[9]{det(\mathbf{\tilde{A}})}$.
+    Together with the rotation matrix $\mathbf{\tilde{R}} = [\mathbf{R~0~0}]$, the goal position is calculated according to Equation~\ref{eq:newGoal}.
+
+    \begin{equation} \label{eq:newGoal}
+        \mathbf{g}_i = (\beta\mathbf{\tilde{A}} + (1 - \beta)\mathbf{\tilde{R}})\mathbf{\tilde{q}}
+    \end{equation}
+    
 
 \section{Conclusion}
 
