added ly after unconditional

--- a/report/paper.tex
+++ b/report/paper.tex
@@ -26,7 +26,7 @@
 
 \begin{abstract}
 
-This report follows the approach proposed by M\"uller et al.\cite{shapematching} to simulate soft body deformation using shape matching and examines how it can be implemented into Autodesk Maya as a deformer plugin. The shape matching method does not require storage of any data about neighbouring vertices and is unconditional stable. Due to its efficiency in terms of memory and computation complexity it is well suited for interactive applications.
+This report follows the approach proposed by M\"uller et al.\cite{shapematching} to simulate soft body deformation using shape matching and examines how it can be implemented into Autodesk Maya as a deformer plugin. The shape matching method does not require storage of any data about neighbouring vertices and is unconditionally stable. Due to its efficiency in terms of memory and computation complexity it is well suited for interactive applications.
 
 \end{abstract}
 
