--- a/report/paper.tex
+++ b/report/paper.tex
@@ -26,7 +26,9 @@
 
 \begin{abstract}
 
-This report follows the approach proposed by M\"uller et al.\cite{shapematching} to simulate soft body deformation using shape matching and examines how it can be implemented into Autodesk Maya as a deformer plugin. The shape matching method does not require storage of any data about neighbouring vertices and is unconditionally stable. Due to its efficiency in terms of memory and computation complexity it is well suited for interactive applications.
+This report follows the approach proposed by M\"uller et al.~\cite{shapematching} to simulate soft body deformation using shape matching and examines how it can be implemented into Autodesk Maya as a deformer plugin. 
+The shape matching method does not require storage of any data about neighbouring vertices and is unconditionally stable. 
+Due to its efficiency in terms of memory and computation complexity it is well suited for interactive applications.
 
 \end{abstract}
 
@@ -36,7 +38,8 @@ This report follows the approach proposed by M\"uller et al.\cite{shapematching}
 \section{Introduction}
     Soft body deformation is a computer graphics method for simulating the deformation of a soft body. 
     There exists many techniques for achieving soft body deformation.
-    In this paper we present the method and results from implementing a soft body deformer plugin for the 3D computer graphics software Maya. The implementation is based on the meshless shape matching method proposed by M\"uller et al.~\cite{shapematching}.
+    In this paper we present the method and results from implementing a soft body deformer plugin for the 3D computer graphics software Maya. 
+   The implementation is based on the meshless shape matching method proposed by M\"uller et al.~\cite{shapematching}.
 
 \section{Background}
     Soft deformable bodies is a field in computer graphics that focuses on the physical and visual simulation of the motion and characteristics of a soft deformable body.
@@ -135,7 +138,9 @@ This report follows the approach proposed by M\"uller et al.\cite{shapematching}
 
 \section{Maya Implementation}
 
-The plugin is built on top of the deformer node, $MPxDeformerNode$, in Mayas C++ API which can control the position of all vertices of an object with the deformer loaded. By copying the vertice positions and storing them as individual particles in a custom particle system in the plugin is more control and freedom gained. This allows the use of high quality linear algebra libraries for efficient and complex calculations. 
+The plugin is built on top of the deformer node, $MPxDeformerNode$, in Mayas C++ API which can control the position of all vertices of an object with the deformer loaded. 
+By copying the vertex positions and storing them as individual particles in a custom particle system the plugin is more control and freedom gained. 
+This allows the use of high quality linear algebra libraries for efficient and complex calculations. 
 
 As seen in figure \ref{fig:gui}, the deformation of a shape can be controlled by changing the following parameters:
 
@@ -151,7 +156,9 @@ As seen in figure \ref{fig:gui}, the deformation of a shape can be controlled by
   \item Initial Velocity 
 \end{myitemize}
 
-The local time variable is connected to the global time so that the deformation will update when the timeline changes. The plugin stores the value of the last time step so the simulation behaves correctly regardless of how the global time is changed. Further variables can be linked with other parameters in Maya such as the gravity magnitude and direction can take their values from a gravity field.
+The local time variable is connected to the global time so that the deformation will update when the timeline changes. 
+The plugin stores the value of the last time step so the simulation behaves correctly regardless of how the global time is changed. 
+Further variables can be linked with other parameters in Maya such as the gravity magnitude and direction can take their values from a gravity field.
 
  \begin{figure}[t]
     \includegraphics[width=\linewidth]{img/gui.png}
@@ -161,7 +168,9 @@ The local time variable is connected to the global time so that the deformation 
 
 \section{Conclusion}
 
-The deformer node plugin can handle rigid as well as soft body (linear and quadratic) deformations with a low computation cost. Figure \ref{fig:maya} illustrates the deformation that happens when a sphere collides with the ground plane. After impact, in figure \ref{fig:sfig2}, the mesh will transform into a egg-like shape to later settle down as the original sphere.
+The deformer node plugin can handle rigid as well as soft body (linear and quadratic) deformations with a low computation cost. 
+Figure \ref{fig:maya} illustrates the deformation that happens when a sphere collides with the ground plane. 
+After impact, in figure \ref{fig:sfig2}, the mesh will transform into a egg-like shape to later settle down as the original sphere.
 
 \begin{figure}
 \begin{subfigure}{.3\textwidth}
@@ -185,9 +194,13 @@ The deformer node plugin can handle rigid as well as soft body (linear and quadr
 
 \section{Discussion and Future Work}
 
-The shape matching method can be useful in rigid and moderately soft body deformations even though the algorithm is not physically grounded. It can model twists and bends well but struggles with stability with large deformations. If the parameters $bounciness$ or $deformation$ is set too high the deformed positions cannot adequately be translated to their goal position, which causes the shape to be flattened upon impact with the ground plane. Proper parameter management is therefore required.
+The shape matching method can be useful in rigid and moderately soft body deformations even though the algorithm is not physically grounded. 
+It can model twists and bends well but struggles with stability with large deformations. 
+If the parameters $bounciness$ or $deformation$ is set too high the deformed positions cannot adequately be translated to their goal position, which causes the shape to be flattened upon impact with the ground plane. 
+Proper parameter management is therefore required.
 
-Another possible extension to the plugin could be to implement support of object to object collision. Current solution only handles collision with the ground plane by naively checking if the a particles y-value is below the y-value of the plane to then respectively updates the forces.
+Another possible extension to the plugin could be to implement support of object to object collision. 
+The current solution only handles collision with the ground plane by naively checking if a particles y-value is below the y-value of the plane.
 
 \bibliographystyle{ieeetr}
 \pagebreak
