--- a/report/paper.tex
+++ b/report/paper.tex
@@ -26,7 +26,7 @@
 
 \begin{abstract}
 
-This report follows the approach proposed by M\"uller et. al.~\cite{shapematching} to simulate soft body deformation using shape matching and examines how it can be implemented into Autodesk Maya as a deformer plugin. 
+\noindent This report follows the approach proposed by M\"uller et. al.~\cite{shapematching} to simulate soft body deformation using shape matching and examines how it can be implemented into Autodesk Maya as a deformer plugin. 
 The shape matching method does not require storage of any data about neighbouring vertices and is unconditionally stable. 
 Due to its efficiency in terms of memory and computation complexity it is well suited for interactive applications.
 
@@ -59,7 +59,7 @@ Due to its efficiency in terms of memory and computation complexity it is well s
     \end{figure}
     
 \section{Shape matching implementation}
-    The soft body is represented by a point cloud, the vertecies, where each particle has a mass $m_i$, an initial position $\mathbf{x}_i^0$ representing the shape of the object and a deformed position $\mathbf{x}_i$.
+    The soft body is represented by a point cloud, the vertices, where each particle has a mass $m_i$, an initial position $\mathbf{x}_i^0$ representing the shape of the object and a deformed position $\mathbf{x}_i$.
     The soft body is affected by external forces such as gravity, collision impulse and friction impulse caused by a collision with an object.
     The external forces $f_{ext} = F_g + J_c + J_f$ is what causes the deformation of the soft body.
     The new velocities and positions for the particles are calculated using the external forces and Euler integration.
@@ -134,6 +134,13 @@ Due to its efficiency in terms of memory and computation complexity it is well s
     \end{equation}
     
 
+\begin{figure}[t]
+    \centering
+    \includegraphics[width=0.8\linewidth]{img/gui.png}
+    \caption{The user interface in Maya which is used to modify the deformation.}
+    \label{fig:gui}
+\end{figure}
+ 
 \section{Maya Implementation}
 
 The plugin is built on top of the deformer node, $MPxDeformerNode$, in Mayas C++ API which can control the position of all vertices of an object with the deformer loaded. 
@@ -158,19 +165,14 @@ The local time variable is connected to the global time so that the deformation 
 The plugin stores the value of the last time step so the simulation behaves correctly regardless of how the global time is changed. 
 Further variables can be linked with other parameters in Maya such as the gravity magnitude and direction can take their values from a gravity field.
 
-\begin{figure}[t]
-    \includegraphics[width=\linewidth]{img/gui.png}
-    \caption{The user interface in Maya which is used to modify the deformation.}
-    \label{fig:gui}
-\end{figure}
 
-The shape is rendered with Image-Based Lighting with the Arnald renderer. 
+The shape is rendered with Image-Based Lighting with the Arnold renderer. 
 
 \section{Conclusion}
 
 The deformer node plugin can handle rigid as well as soft body (linear and quadratic) deformations with a low computation cost. 
 Figure \ref{fig:maya} illustrates the deformation that happens when a sphere collides with the ground plane. 
-After impact, in Figure \ref{fig:sfig2}, the mesh will transform into a egg-like shape to later settle down as the original sphere.
+After impact, in Figure \ref{fig:sfig2}, the mesh will transform into an egg-like shape to later settle down as the original sphere.
 
 \begin{figure} [h!]
 \begin{subfigure}{.5\linewidth}
